--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,14 @@
-.App {
-  text-align: center;
+#menu {
+	display: flex;
+	justify-content: space-between;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+#cards-meal {
+	display: flex;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.card-meal {
+	border: 1px solid #333;
+	flex: 1;
+	margin-right: 5px;
 }
